update Test fuctions

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Asset Repair Management"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -20,14 +20,17 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=asset_repair_management
+DB_USERNAME=root
+DB_PASSWORD=
 
-SESSION_DRIVER=database
+# Or use SQLite locally (uncomment below and comment the MySQL block above)
+# DB_CONNECTION=sqlite
+
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
