--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "alpinejs": "^3.15.1",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.4.3",
     "laravel-vite-plugin": "^2.0.1",
