--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "vite": "^7.1.9"
+  },
+  "dependencies": {
+    "axios": "^1.13.2"
   }
 }
